fixes body overflow issue with ngDialog

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -7,10 +7,6 @@
         overflow: hidden;
     }
   
-    .navbar-header {
-        margin: 0px !important;
-    }
-
     body.notLogged {
         background-image: url('../images/centralbg-sm.jpg') ;
         background-position: center center !important;
@@ -41,6 +37,7 @@ html, body, #app-container {
     padding: 0;
     font-size: 13px;
     color: #585858;
+    overflow: hidden;
 }
 
 body {
@@ -335,6 +332,10 @@ body {
   color: red;
 }
 
+.form-group button {
+    margin: 4px !important;
+}
+
 .container-fluid {
   padding-left: 0 !important;
   padding-right: 0 !important;
@@ -440,6 +441,7 @@ body {
         padding: 1em 1em 0em 1em !important;
         margin: 0px !important;
         width: 100% !important;
+        left: 0; right: 0; top: 0; bottom: 0;
     }
 }
 
@@ -486,7 +488,8 @@ body {
 }
 
 .ngdialog-content .form-group {
-  margin-bottom: 6px !important;
+  margin: 0px !important;
+  padding-bottom: 6px !important;
 }
 
 .flexbox-container {
